fix: 修改看板的邊距及overflow 改為hidden ，card內使用overflow visible

--- a/taskify-frontend/src/App.scss
+++ b/taskify-frontend/src/App.scss
@@ -1,5 +1,5 @@
 * {
-  overflow: visible;
+  overflow: hidden;
   letter-spacing: 0.8px;
 }
 
