--- a/taskify-frontend/src/components/TaskColumn.module.scss
+++ b/taskify-frontend/src/components/TaskColumn.module.scss
@@ -10,11 +10,26 @@
     background-color: #4592af;
     padding: 12px 2px 12px 5px;
     border-radius: 10px;
-    max-height: calc(100% - 20px)
+    max-height: calc(100% - 20px);
+  }
+}
+
+.titleContainer {
+  overflow: visible;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2px;
+}
+
+.actionIcon {
+  &:hover {
+    background: #40819b;
   }
 }
 
 .taskTitle {
+  flex: 2;
+    margin: 0 4px;
   background: transparent;
   input {
     background-color: #4592af;
@@ -33,7 +48,12 @@
 .taskContainer {
   overflow-x: hidden;
   overflow-y: auto;
-  margin: 4px;
+  // margin: 4px;
   padding: 2px 4px;
   gap: 8px;
+}
+
+.addButtonContainer {
+padding: 0px 4px;
+    overflow: visible;
 }
